--- a/display/main.html
+++ b/display/main.html
@@ -1,118 +1,156 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <title>ECharts Example</title>
     <script src="https://cdn.jsdelivr.net/npm/echarts@5.5.0/dist/echarts.min.js"></script>
-</head>
-<body>
-    <div id="main" style="width: 100%; height: 85vh; overflow: hidden;"></div>
+  </head>
+  <body>
+    <div id="main" style="width: 100%; height: 85vh; overflow: hidden"></div>
     <script>
-
-var chartDom = document.getElementById('main');
-var myChart = echarts.init(chartDom);
-var option;
-// File read
-const res = await fetch("../artistdata/ac_dc.json");
-const text = await res.text();
-const artistData = JSON.parse(text);
-const artistName = artistData.name;
-const albums = [];
-for(const album of artistData.albums) {
-  albums.push({
-    name: album.name,
-    ageAtRelease: 2025 - album.releaseYear,
-    totalPlaycount: album.totalPlaycount,
-  });
-}
-let ageOfArtistAtRelease = [];
-let playcountInMils = [];
-for(let i = albums.length - 1;i >= 0; i--){
-    ageOfArtistAtRelease.push(`${albums[i].year}`)
-    const inmil = albums[i].totalPlaycount / 1000000
-    playcountInMils.push(parseFloat(inmil.toFixed(1)))
-}
-console.log(ageOfArtistAtRelease);
-console.log(playcountInMils);
-
-let yMax = 500;
-
-option = {
-    grid: {top: '5%', bottom: '10%', left: '5%', right: '5%', containLabel: true},
-  title: {
-    text: artistName,
-    subtext: 'some data here',
-    bottom: '0%',
-    //top: 'bottom',
-    left: '5%',
-    textStyle: {
-      fontSize: 30,
-      color: '#000'
-    },
-    subtextStyle: {
-      fontSize: 25,
-      color: '#000' 
-    },
-  },
-  xAxis: {
-    data: ageOfArtistAtRelease,
-    axisLabel: {
-      fontSize: 50,
-      fontWeight: 'bolder',
-      inside: true,
-      color: '#fff',
-    },
-    axisTick: {
-      show: false
-    },
-    axisLine: {
-      show: false
-    },
-    z: 10
-  },
-  yAxis: {
-    type: 'value',
-    axisLabel: {
-      show: false // Hide Y-axis labels
-    },
-    splitLine: {show: false}
-  },
-  dataZoom: null,
-  series: [
-    {
-      barCategoryGap: '0%',
-      type: 'bar',
-      showBackground: false,
-      label: {
-        show: true, // Enable labels
-        formatter: function(value, index) {
-        // Map each value to a custom label
-        return value.value+`m`
-      },
-        position: 'top', 
-        fontSize: 50, 
-        color: '#aaa'
-      },
-      itemStyle: {
-      color: function(params) {
-        // Alternate colors based on data index
-        return params.dataIndex % 2 === 0 ? '#2378f7' : '#2ff8f7';
-      }
-    },
-      emphasis: {
-        itemStyle: {
-          color: new echarts.graphic.LinearGradient(0, 0, 0, 1, [
-            { offset: 0, color: '#2378f7' },
-            { offset: 0.7, color: '#2378f7' },
-            { offset: 1, color: '#83bff6' }
-          ])
+      (async function () {
+        var chartDom = document.getElementById("main");
+        var myChart = echarts.init(chartDom);
+        var option;
+        // File read
+        const res = await fetch("../artistdata/ac_dc.json");
+        const text = await res.text();
+        const artistData = JSON.parse(text);
+        const artistName = artistData.name;
+        const albums = [];
+        for (const album of artistData.albums) {
+          albums.push({
+            name: album.name,
+            ageAtRelease: album.releaseYear - artistData.avgYearOfBirth,
+            totalPlaycount: album.totalPlaycount,
+          });
         }
-      },
-      data: playcountInMils
-    }
-  ]
-};
-option && myChart.setOption(option);
+        let ageOfArtistAtRelease = [];
+        let playcountInMils = [];
+        for (let i = albums.length - 1; i >= 0; i--) {
+          console.log(albums[i].name);
+          ageOfArtistAtRelease.push(`${albums[i].ageAtRelease}`);
+          const inmil = albums[i].totalPlaycount / 1000000;
+          playcountInMils.push(parseFloat(inmil.toFixed(1)));
+        }
+        console.log(ageOfArtistAtRelease);
+        console.log(playcountInMils);
 
+        let labelStates = playcountInMils.map((_, index) => ({
+          isToggled: false,
+          originalLabel: playcountInMils[index] + "m",
+          albumName: albums[albums.length - 1 - index].name, // Reverse index to match loop
+        }));
+
+        let yMax = 500;
+
+        option = {
+          grid: {
+            top: "5%",
+            bottom: "10%",
+            left: "5%",
+            right: "5%",
+            containLabel: true,
+          },
+          title: {
+            text: artistName,
+            subtext: "some data here",
+            bottom: "0%",
+            //top: 'bottom',
+            left: "5%",
+            textStyle: {
+              fontSize: 30,
+              color: "#000",
+            },
+            subtextStyle: {
+              fontSize: 25,
+              color: "#000",
+            },
+          },
+          xAxis: {
+            data: ageOfArtistAtRelease,
+            axisLabel: {
+              fontSize: 20,
+              fontWeight: "bolder",
+              inside: true,
+              color: "#fff",
+            },
+            axisTick: {
+              show: false,
+            },
+            axisLine: {
+              show: false,
+            },
+            z: 10,
+          },
+          yAxis: {
+            type: "value",
+            axisLabel: {
+              show: false, // Hide Y-axis labels
+            },
+            splitLine: { show: false },
+          },
+          dataZoom: null,
+          series: [
+            {
+              barCategoryGap: "0%",
+              type: "bar",
+              showBackground: false,
+              label: {
+                show: true, // Enable labels
+                formatter: function (value, index) {
+                  // Map each value to a custom label
+                  return value.value + `m`;
+                },
+                position: "top",
+                fontSize: 20,
+                color: "black",
+              },
+              itemStyle: {
+                color: function (params) {
+                  // Alternate colors based on data index
+                  return params.dataIndex % 2 === 0 ? "#2378f7" : "#2378f7";
+                },
+              },
+              emphasis: {
+                label: {
+                  show: true,
+                  position: "top",
+                  color: "black",
+                },
+                itemStyle: {
+                  color: new echarts.graphic.LinearGradient(0, 0, 0, 1, [
+                    { offset: 0, color: "#2378f7" },
+                    { offset: 0.7, color: "#2378f7" },
+                    { offset: 1, color: "#83bff6" },
+                  ]),
+                },
+              },
+              data: playcountInMils,
+            },
+          ],
+        };
+        option && myChart.setOption(option);
+
+        myChart.on("click", function (params) {
+          if (params.seriesType === "bar") {
+            labelStates[params.dataIndex].isToggled =
+              !labelStates[params.dataIndex].isToggled;
+            myChart.setOption({
+              series: [
+                {
+                  label: {
+                    formatter: function (params) {
+                      return labelStates[params.dataIndex].isToggled
+                        ? labelStates[params.dataIndex].albumName
+                        : labelStates[params.dataIndex].originalLabel;
+                    },
+                  },
+                },
+              ],
+            });
+          }
+        });
+      })();
     </script>
-</body>
+  </body>
 </html>
