--- a/display/main.html
+++ b/display/main.html
@@ -69,7 +69,7 @@
         var chartDom = document.getElementById("main");
         var myChart = echarts.init(chartDom);
         var option;
-        let artistName = "Beyoncé";
+        let artistName = "Backstreet boys";
         // Get the artist info
         artistName = simplifyName(artistName);
         let res = await fetch(`../artistdata/${artistName}.json`);
