--- a/display/main.html
+++ b/display/main.html
@@ -71,8 +71,8 @@
         var myChart = echarts.init(chartDom);
         var option;
         // ***
-        let artistName = "radiohead";
-        // ***
+        let artistName = "drake";
+        // #region logic
         // Get the artist info
         artistName = simplifyName(artistName);
         let res = await fetch(`../artistdata/${artistName}.json`);
@@ -129,6 +129,10 @@
         if (labelSize < 14) {
           labelSize = 14;
         }
+        // #endregion
+        const color = "rgba(195,96,96, ";
+        const halfColor = color + "0.5)";
+        const fullColor = color + "1)";
 
         option = {
           grid: {
@@ -145,7 +149,7 @@
             //top: 'bottom',
             left: "5%",
             textStyle: {
-              fontSize: 50,
+              fontSize: 45,
               fontFamily: "Lexend Exa8",
               color: "#000",
             },
@@ -197,10 +201,7 @@
               },
               itemStyle: {
                 color: function (params) {
-                  // Alternate colors based on data index
-                  //return "#2350f7";
-                  return "rgba(130, 96, 195, 1)";
-                  //return params.dataIndex % 2 === 0 ? "#2378f7" : "#2350f7";
+                  return fullColor;
                 },
               },
               emphasis: {
@@ -211,12 +212,9 @@
                 },
                 itemStyle: {
                   color: new echarts.graphic.LinearGradient(0, 0, 0, 1, [
-                    // { offset: 0, color: "#2378f7" },
-                    // { offset: 0.7, color: "#2378f7" },
-                    // { offset: 1, color: "#83bff6" },
-                    { offset: 0, color: "rgba(130, 96, 195, 0.5)" },
-                    { offset: 0.8, color: "rgba(130, 96, 195, 1)" },
-                    { offset: 1, color: "rgba(130, 96, 195, 1)" },
+                    { offset: 0, color: halfColor },
+                    { offset: 0.8, color: fullColor },
+                    { offset: 1, color: fullColor },
                   ]),
                 },
               },
