--- a/display/main.html
+++ b/display/main.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>ECharts Example</title>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/echarts@5.5.0/dist/echarts.min.js"></script> -->
     <script src="echarts.min.js"></script>
     <meta
       http-equiv="Cache-Control"
